[package]
name = "pngbomb"
version = "0.1.0"
authors = ["liclac <hi@liclac.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "^0.12"
png = "^0.14"
deflate = "^0.7"
flate2 = { version = "^1.0", features = ["zlib"], default-features = false }
crc = "^1.0"
pbr = "^1.0"
serde = "^1.0"
docopt = "^1.1"
